// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site Detail Page should render with given state from Redux store: snapshot-with-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-65 NavBar-appBarXs-67"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-68"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-78"
          component="[object Object]"
          to="/"
        >
          <mock-typography
            variant="h6"
          >
            HOME
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-78"
          component="[object Object]"
          to="/map"
        >
          <mock-typography
            variant="h6"
          >
            MAP
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-78"
          component="[object Object]"
          to="/buoy"
        >
          <mock-typography
            variant="h6"
          >
            BUOY
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-78"
          component="[object Object]"
          to="/drones"
        >
          <mock-typography
            variant="h6"
          >
            DRONE
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-78"
          component="[object Object]"
          to="/about"
        >
          <mock-typography
            variant="h6"
          >
            ABOUT
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-78"
          component="[object Object]"
          to="/faq"
        >
          <mock-typography
            variant="h6"
          >
            FAQ
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-78"
          component="[object Object]"
          to="/tracker"
        >
          <mock-typography
            variant="h6"
          >
            TRACK A HEATWAVE
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-78"
          component="[object Object]"
          to="/register"
        >
          <mock-typography
            variant="h6"
          >
            REGISTER A SITE
          </mock-typography>
        </mock-button>
        <mock-box
          margintop="auto"
          padding="25px"
        >
          <mock-typography
            variant="subtitle1"
          >
            Aqualink's source code is licenced under MIT. Contribute!
          </mock-typography>
          <div
            class="MuiButtonGroup-root MuiButtonGroup-contained"
            role="group"
          >
            <mock-button
              classname="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContained MenuDrawer-contributeButton-77"
              color="default"
              disabled="false"
              disableelevation="false"
              disablefocusripple="false"
              disableripple="false"
              fullwidth="false"
              href="https://github.com/aqualinkorg/aqualink-app"
              size="medium"
              starticon="[object Object]"
              target="_blank"
              variant="contained"
            >
              GitHub
            </mock-button>
            <mock-button
              classname="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContained MenuDrawer-contributeButton-77"
              color="default"
              disabled="false"
              disableelevation="false"
              disablefocusripple="false"
              disableripple="false"
              fullwidth="false"
              href="https://ovio.org/project/aqualinkorg/aqualink-app"
              size="medium"
              target="_blank"
              variant="contained"
            >
              <img
                alt="Ovio Logo"
                src="ovio_logo.png"
              />
            </mock-button>
          </div>
        </mock-box>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-2 MuiGrid-grid-md-6"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-link
              classname="NavBar-navBarLink-66"
              href="/map"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aqua
              </mock-typography>
              <mock-typography
                style="color: rgb(138, 198, 222);"
                variant="h4"
              >
                link
              </mock-typography>
            </mock-link>
          </mock-box>
        </div>
        <mock-hidden
          xsdown="true"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-4 MuiGrid-grid-md-3"
          >
            <div
              class="Search-searchBar-79"
            >
              <div
                class="Search-searchBarIcon-80"
              >
                <mock-iconbutton
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
              <div
                class="Search-searchBarText-81"
              >
                <div
                  aria-expanded="false"
                  class="MuiAutocomplete-root Search-searchBarInput-82 MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                  role="combobox"
                >
                  <mock-textfield
                    disabled="false"
                    fullwidth="true"
                    id="location"
                    inputlabelprops="[object Object]"
                    inputprops="[object Object]"
                    placeholder="Search"
                    variant="outlined"
                  />
                </div>
              </div>
            </div>
          </div>
        </mock-hidden>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-4 MuiGrid-grid-md-3"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-75"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root NavBar-expandIcon-74"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-71"
              keepmounted="true"
              menulistprops="[object Object]"
              open="false"
              popoverclasses="[object Object]"
            >
              <mock-divider
                classname="NavBar-userMenuDivider-70"
              />
              <a
                class="NavBar-menuItemLink-73"
                href="/dashboard"
              >
                <mock-menuitem
                  classname="NavBar-menuItem-72"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5 5h4v6H5zm10 8h4v6h-4zM5 17h4v2H5zM15 5h4v2h-4z"
                          opacity=".3"
                        />
                        <path
                          d="M3 13h8V3H3v10zm2-8h4v6H5V5zm8 16h8V11h-8v10zm2-8h4v6h-4v-6zM13 3v6h8V3h-8zm6 4h-4V5h4v2zM3 21h8v-6H3v6zm2-4h4v2H5v-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      Dashboard
                    </div>
                  </div>
                </mock-menuitem>
              </a>
              <mock-divider
                classname="NavBar-userMenuDivider-70"
              />
              <mock-menuitem
                classname="NavBar-menuItem-72"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Logout
                  </div>
                </div>
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
        <mock-hidden
          smup="true"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            style="margin: 0px; padding-top: 0px;"
          >
            <div
              class="Search-searchBar-79"
            >
              <div
                class="Search-searchBarIcon-80"
              >
                <mock-iconbutton
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
              <div
                class="Search-searchBarText-81"
              >
                <div
                  aria-expanded="false"
                  class="MuiAutocomplete-root Search-searchBarInput-82 MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                  role="combobox"
                >
                  <mock-textfield
                    disabled="false"
                    fullwidth="true"
                    id="location"
                    inputlabelprops="[object Object]"
                    inputprops="[object Object]"
                    placeholder="Search"
                    variant="outlined"
                  />
                </div>
              </div>
            </div>
          </div>
        </mock-hidden>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="xs"
    open="false"
    scroll="body"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root RegisterDialog-dialogHeader-86"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-container"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="RegisterDialog-dialogHeaderSecondPart-87"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <mock-iconbutton
                  classname="RegisterDialog-closeButton-85"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root RegisterDialog-dialogContentTitle-88 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="RegisterDialog-form-89"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-90 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-90 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-90 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="organization"
                  inputprops="[object Object]"
                  label="Organization"
                  name="organization"
                  placeholder="Organization"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-90 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-90 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
                    classname="RegisterDialog-termsCheckbox-94"
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-11"
                >
                  <mock-box>
                    <mock-typography
                      classname="RegisterDialog-formText-92"
                      color="textSecondary"
                      variant="subtitle1"
                    >
                      I have read the
                       
                      <a
                        class="RegisterDialog-termsLink-95"
                        href="/terms"
                      >
                        Terms and Conditions
                      </a>
                    </mock-typography>
                  </mock-box>
                </div>
              </div>
              <div
                class="MuiGrid-root RegisterDialog-button-93 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  CREATE ACCOUNT
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="RegisterDialog-formText-92"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="xs"
    open="false"
  >
    <mock-card
      elevation="0"
    >
      <div
        class="MuiCardHeader-root SignInDialog-dialogHeader-97"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-container"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="SignInDialog-dialogHeaderSecondPart-98"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <mock-iconbutton
                  classname="SignInDialog-closeButton-96"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root SignInDialog-dialogContentTitle-99 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="SignInDialog-form-100"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-101 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-101 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  classname="SignInDialog-forgotPasswordButton-105"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
                class="MuiGrid-root SignInDialog-button-104 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-103"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN UP
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="MuiContainer-root Site-noDataWrapper-64 MuiContainer-maxWidthLg"
  >
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
            role="alert"
          >
            <div
              class="MuiAlert-icon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                />
              </svg>
            </div>
            <div
              class="MuiAlert-message"
            >
              Something went wrong
            </div>
            <div
              class="MuiAlert-action"
            >
              <mock-iconbutton
                color="inherit"
                size="small"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </mock-iconbutton>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root SiteNavBar-root-106 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
        >
          <div
            class="MuiGrid-root SiteNavBar-headerButtonWrapper-109 MuiGrid-item"
          >
            <mock-iconbutton
              aria-label="menu"
              color="primary"
              component="[object Object]"
              edge="start"
              to="/map"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </mock-iconbutton>
          </div>
          <div
            class="MuiGrid-root SiteNavBar-headerWrapper-110 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-xs-12 MuiGrid-grid-md-8"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                >
                  <div
                    class="MuiGrid-root SiteNavBar-siteNameWrapper-111 MuiGrid-item"
                  >
                    <mock-typography
                      variant="h4"
                    >
                      Hawaii
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root SiteNavBar-headerButtonWrapper-109 MuiGrid-item"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  variant="h6"
                >
                  Managed by Some organization
                </mock-typography>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  variant="subtitle1"
                >
                  Last surveyed: Sep 10, 2020
                </mock-typography>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <mock-box
      mt="1.3rem"
    >
      <div
        class="MuiPaper-root MuiAlert-root MuiAlert-standardInfo MuiPaper-elevation0"
        role="alert"
      >
        <div
          class="MuiAlert-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </div>
        <div
          class="MuiAlert-message"
        >
          Currently no Smart Buoy deployed at this site location. Real-time values are derived from a combination of NOAA satellite readings and weather models.
        </div>
      </div>
    </mock-box>
    <mock-box
      mt="1.5rem"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-flex-end MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <mock-box
              classname="Title-root-120"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                  style="margin-right: 1rem;"
                >
                  <mock-typography
                    classname=""
                    variant="subtitle2"
                  >
                    LAT: 0.000
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                  style="margin-right: 0px;"
                >
                  <mock-typography
                    classname=""
                    variant="subtitle2"
                  >
                    LONG: 0.000
                  </mock-typography>
                </div>
              </div>
            </mock-box>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="CardWithTitle-container-118"
            >
              <mock-map
                polygon="[object Object]"
                siteid="1"
                surveypoints=""
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="CardWithTitle-container-118"
            >
              <mock-featuredmedia
                featuredimage=""
                siteid="1"
                surveyid="46"
              />
            </div>
          </div>
        </div>
      </div>
    </mock-box>
  </div>
  <mock-appbar
    classname="Footer-appBar-123"
    position="static"
  >
    <mock-toolbar>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
        >
          <mock-link
            classname="Footer-navBarLink-124"
            href="/map"
          >
            <mock-typography
              color="textPrimary"
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-link>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
</div>
`;

exports[`Site Detail Page should render with given state from Redux store: snapshot-with-no-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-3 NavBar-appBarXs-5"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-6"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-16"
          component="[object Object]"
          to="/"
        >
          <mock-typography
            variant="h6"
          >
            HOME
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-16"
          component="[object Object]"
          to="/map"
        >
          <mock-typography
            variant="h6"
          >
            MAP
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-16"
          component="[object Object]"
          to="/buoy"
        >
          <mock-typography
            variant="h6"
          >
            BUOY
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-16"
          component="[object Object]"
          to="/drones"
        >
          <mock-typography
            variant="h6"
          >
            DRONE
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-16"
          component="[object Object]"
          to="/about"
        >
          <mock-typography
            variant="h6"
          >
            ABOUT
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-16"
          component="[object Object]"
          to="/faq"
        >
          <mock-typography
            variant="h6"
          >
            FAQ
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-16"
          component="[object Object]"
          to="/tracker"
        >
          <mock-typography
            variant="h6"
          >
            TRACK A HEATWAVE
          </mock-typography>
        </mock-button>
        <mock-button
          classname="MenuDrawer-menuDrawerButton-16"
          component="[object Object]"
          to="/register"
        >
          <mock-typography
            variant="h6"
          >
            REGISTER A SITE
          </mock-typography>
        </mock-button>
        <mock-box
          margintop="auto"
          padding="25px"
        >
          <mock-typography
            variant="subtitle1"
          >
            Aqualink's source code is licenced under MIT. Contribute!
          </mock-typography>
          <div
            class="MuiButtonGroup-root MuiButtonGroup-contained"
            role="group"
          >
            <mock-button
              classname="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContained MenuDrawer-contributeButton-15"
              color="default"
              disabled="false"
              disableelevation="false"
              disablefocusripple="false"
              disableripple="false"
              fullwidth="false"
              href="https://github.com/aqualinkorg/aqualink-app"
              size="medium"
              starticon="[object Object]"
              target="_blank"
              variant="contained"
            >
              GitHub
            </mock-button>
            <mock-button
              classname="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContained MenuDrawer-contributeButton-15"
              color="default"
              disabled="false"
              disableelevation="false"
              disablefocusripple="false"
              disableripple="false"
              fullwidth="false"
              href="https://ovio.org/project/aqualinkorg/aqualink-app"
              size="medium"
              target="_blank"
              variant="contained"
            >
              <img
                alt="Ovio Logo"
                src="ovio_logo.png"
              />
            </mock-button>
          </div>
        </mock-box>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-2 MuiGrid-grid-md-6"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-link
              classname="NavBar-navBarLink-4"
              href="/map"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aqua
              </mock-typography>
              <mock-typography
                style="color: rgb(138, 198, 222);"
                variant="h4"
              >
                link
              </mock-typography>
            </mock-link>
          </mock-box>
        </div>
        <mock-hidden
          xsdown="true"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-4 MuiGrid-grid-md-3"
          >
            <div
              class="Search-searchBar-17"
            >
              <div
                class="Search-searchBarIcon-18"
              >
                <mock-iconbutton
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
              <div
                class="Search-searchBarText-19"
              >
                <div
                  aria-expanded="false"
                  class="MuiAutocomplete-root Search-searchBarInput-20 MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                  role="combobox"
                >
                  <mock-textfield
                    disabled="false"
                    fullwidth="true"
                    id="location"
                    inputlabelprops="[object Object]"
                    inputprops="[object Object]"
                    placeholder="Search"
                    variant="outlined"
                  />
                </div>
              </div>
            </div>
          </div>
        </mock-hidden>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-4 MuiGrid-grid-md-3"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-13"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root NavBar-expandIcon-12"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-9"
              keepmounted="true"
              menulistprops="[object Object]"
              open="false"
              popoverclasses="[object Object]"
            >
              <mock-divider
                classname="NavBar-userMenuDivider-8"
              />
              <a
                class="NavBar-menuItemLink-11"
                href="/dashboard"
              >
                <mock-menuitem
                  classname="NavBar-menuItem-10"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5 5h4v6H5zm10 8h4v6h-4zM5 17h4v2H5zM15 5h4v2h-4z"
                          opacity=".3"
                        />
                        <path
                          d="M3 13h8V3H3v10zm2-8h4v6H5V5zm8 16h8V11h-8v10zm2-8h4v6h-4v-6zM13 3v6h8V3h-8zm6 4h-4V5h4v2zM3 21h8v-6H3v6zm2-4h4v2H5v-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      Dashboard
                    </div>
                  </div>
                </mock-menuitem>
              </a>
              <mock-divider
                classname="NavBar-userMenuDivider-8"
              />
              <mock-menuitem
                classname="NavBar-menuItem-10"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Logout
                  </div>
                </div>
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
        <mock-hidden
          smup="true"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            style="margin: 0px; padding-top: 0px;"
          >
            <div
              class="Search-searchBar-17"
            >
              <div
                class="Search-searchBarIcon-18"
              >
                <mock-iconbutton
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
              <div
                class="Search-searchBarText-19"
              >
                <div
                  aria-expanded="false"
                  class="MuiAutocomplete-root Search-searchBarInput-20 MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                  role="combobox"
                >
                  <mock-textfield
                    disabled="false"
                    fullwidth="true"
                    id="location"
                    inputlabelprops="[object Object]"
                    inputprops="[object Object]"
                    placeholder="Search"
                    variant="outlined"
                  />
                </div>
              </div>
            </div>
          </div>
        </mock-hidden>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="xs"
    open="false"
    scroll="body"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root RegisterDialog-dialogHeader-24"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-container"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="RegisterDialog-dialogHeaderSecondPart-25"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <mock-iconbutton
                  classname="RegisterDialog-closeButton-23"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root RegisterDialog-dialogContentTitle-26 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="RegisterDialog-form-27"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-28 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-28 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-28 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="organization"
                  inputprops="[object Object]"
                  label="Organization"
                  name="organization"
                  placeholder="Organization"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-28 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-28 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
                    classname="RegisterDialog-termsCheckbox-32"
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-11"
                >
                  <mock-box>
                    <mock-typography
                      classname="RegisterDialog-formText-30"
                      color="textSecondary"
                      variant="subtitle1"
                    >
                      I have read the
                       
                      <a
                        class="RegisterDialog-termsLink-33"
                        href="/terms"
                      >
                        Terms and Conditions
                      </a>
                    </mock-typography>
                  </mock-box>
                </div>
              </div>
              <div
                class="MuiGrid-root RegisterDialog-button-31 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  CREATE ACCOUNT
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="RegisterDialog-formText-30"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="xs"
    open="false"
  >
    <mock-card
      elevation="0"
    >
      <div
        class="MuiCardHeader-root SignInDialog-dialogHeader-35"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-container"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="SignInDialog-dialogHeaderSecondPart-36"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <mock-iconbutton
                  classname="SignInDialog-closeButton-34"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root SignInDialog-dialogContentTitle-37 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="SignInDialog-form-38"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-39 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-39 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  classname="SignInDialog-forgotPasswordButton-43"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
                class="MuiGrid-root SignInDialog-button-42 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-41"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN UP
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="MuiContainer-root Site-noDataWrapper-2 MuiContainer-maxWidthLg"
  >
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
            role="alert"
          >
            <div
              class="MuiAlert-icon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                />
              </svg>
            </div>
            <div
              class="MuiAlert-message"
            >
              Something went wrong
            </div>
            <div
              class="MuiAlert-action"
            >
              <mock-iconbutton
                color="inherit"
                size="small"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </mock-iconbutton>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root SiteNavBar-root-44 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
        >
          <div
            class="MuiGrid-root SiteNavBar-headerButtonWrapper-47 MuiGrid-item"
          >
            <mock-iconbutton
              aria-label="menu"
              color="primary"
              component="[object Object]"
              edge="start"
              to="/map"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </mock-iconbutton>
          </div>
          <div
            class="MuiGrid-root SiteNavBar-headerWrapper-48 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-xs-12 MuiGrid-grid-md-8"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                >
                  <div
                    class="MuiGrid-root SiteNavBar-siteNameWrapper-49 MuiGrid-item"
                  >
                    <mock-typography
                      variant="h4"
                    >
                      Hawaii
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root SiteNavBar-headerButtonWrapper-47 MuiGrid-item"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  variant="h6"
                >
                  Managed by Some organization
                </mock-typography>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <mock-box
      mt="1.3rem"
    >
      <div
        class="MuiPaper-root MuiAlert-root MuiAlert-standardInfo MuiPaper-elevation0"
        role="alert"
      >
        <div
          class="MuiAlert-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </div>
        <div
          class="MuiAlert-message"
        >
          Currently no Smart Buoy deployed at this site location. Real-time values are derived from a combination of NOAA satellite readings and weather models.
        </div>
      </div>
    </mock-box>
    <mock-box
      mt="1.5rem"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-flex-end MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <mock-box
              classname="Title-root-58"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                  style="margin-right: 1rem;"
                >
                  <mock-typography
                    classname=""
                    variant="subtitle2"
                  >
                    LAT: 0.000
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                  style="margin-right: 0px;"
                >
                  <mock-typography
                    classname=""
                    variant="subtitle2"
                  >
                    LONG: 0.000
                  </mock-typography>
                </div>
              </div>
            </mock-box>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="CardWithTitle-container-56"
            >
              <mock-map
                polygon="[object Object]"
                siteid="1"
                surveypoints=""
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="CardWithTitle-container-56"
            >
              <mock-featuredmedia
                siteid="1"
              />
            </div>
          </div>
        </div>
      </div>
    </mock-box>
  </div>
  <mock-appbar
    classname="Footer-appBar-61"
    position="static"
  >
    <mock-toolbar>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
        >
          <mock-link
            classname="Footer-navBarLink-62"
            href="/map"
          >
            <mock-typography
              color="textPrimary"
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-link>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
</div>
`;
